Fixed some syntax
- Changed removeFirst() to remove(0)
- Removed the colour blue from transport cards